# truenas-zpool-status

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  cloud-mirror  conftest.py  debug_git_fetch.py  dropbox-push.py  pyproject.toml  whats-next.md  zpstat  zstat
cloud_mirror/: __init__.py  __main__.py  cli.py  config.py  direction.py  main.py  pull.py  push.py  rclone.py  update.py  zfs.py
context/: 1-structure.md  2-workflow.md  3-coding-standards.md  4-testing-standards.md  5-commit-standards.md  CLAUDE.md
context/templates/: CLAUDE.md
context/templates/decisions/: architectural-decision.adr.md
context/templates/requirements/: technical-change.trd.md
context/templates/work-items/: DONE.md  capability-name.capability.md  feature-name.feature.md  story-name.story.md
scripts/: create-test-pool.sh  setup-zfs-vm.sh  start-test-vm.sh
specs/: CLAUDE.md
specs/capability-27_dropbox-push/: dropbox-push.capability.md
specs/capability-27_dropbox-push/feature-48_dropbox-authentication/: dropbox-authentication.feature.md
specs/capability-27_dropbox-push/feature-54_push-to-dropbox/: push-to-dropbox.feature.md
specs/decisions/: adr-002_git-based-self-update.md
specs/doing/capability-10_colima-test-environment/: colima-test-environment.capability.md
specs/doing/capability-27_dropbox-mirror-push/: dropbox-mirror-push.capability.md
specs/doing/capability-54_dropbox-mirror-pull/: dropbox-mirror-pull.capability.md
specs/doing/capability-78_self-update/: self-update.capability.md
specs/doing/capability-88_cli-configuration/: cli-configuration.capability.md  cli-usability.trd.md
specs/templates/: CLAUDE.md  README.md  structure.yaml
specs/templates/decisions/: architectural-decision.adr.md
specs/templates/requirements/: technical-change.trd.md
specs/templates/work-items/: DONE.md  capability-name.capability.md  feature-name.feature.md  story-name.story.md
tests/: conftest.py  rclone-test.conf  test_docker_environment.py  test_status.py
tests/environment/: __init__.py  test_colima.py  test_pool.py  test_rclone.py  test_zfs_in_vm.py
tests/fixtures/: __init__.py  git_fixtures.py  test_git_debug.py  test_git_fixtures.py  test_sample_files.py  test_zfs_fixtures.py
tests/integration/cli/: test_wrapper_integration.py
tests/integration/dropbox/: test_dropbox_connection.py
tests/integration/push/: __init__.py  test_integration.py
tests/integration/rclone/: test_basic_sync.py  test_dropbox_sync.py  test_version_backup.py
tests/integration/update/: test_dirty_repo_blocks_update.py  test_update_failure_handling.py
tests/integration/zfs/: test_clone_tree_operations.py  test_snapshot_operations.py
tests/unit/cli/: test_argument_parsing.py  test_sync_command.py  test_wrapper.py
tests/unit/config/: test_config_merging.py  test_config_search.py  test_toml_parsing.py
tests/unit/direction/: __init__.py  test_direction_detection.py
tests/unit/pull/: __init__.py  test_pull_operations.py
tests/unit/push/: __init__.py  test_orchestrator.py  test_run_push.py
tests/unit/rclone/: test_command_building.py
tests/unit/update/: test_argument_preservation.py  test_update_detection.py
zpool_status/: __init__.py  __main__.py  main.py  status.py
(+104 files in other folders)
