[project]
name = "zpool-status"
version = "0.1.0"
description = "Enhanced zpool status with disk model and serial number info for TrueNAS SCALE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: mark test as slow-running",
]

[tool.ruff.lint]
select = ["B", "S", "PT", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
